--- a/QtGui_DectectLetterFromImage/QtGui_DectectLetterFromImage.vcxproj.filters
+++ b/QtGui_DectectLetterFromImage/QtGui_DectectLetterFromImage.vcxproj.filters
@@ -39,9 +39,15 @@
     <ClCompile Include="qtgui_dectectletterfromimage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="trace.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="trace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
