Update output window

--- a/QtGui_DectectLetterFromImage/QtGui_DectectLetterFromImage.vcxproj
+++ b/QtGui_DectectLetterFromImage/QtGui_DectectLetterFromImage.vcxproj
@@ -131,6 +131,7 @@
     <ClCompile Include="trace.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="StructureAndDefinition.h" />
     <ClInclude Include="trace.h" />
     <QtMoc Include="qtgui_dectectletterfromimage.h" />
     <ClInclude Include="stdafx.h" />
