--- a/QtGui_DectectLetterFromImage/QtGui_DectectLetterFromImage.vcxproj.filters
+++ b/QtGui_DectectLetterFromImage/QtGui_DectectLetterFromImage.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="trace.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StructureAndDefinition.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="qtgui_dectectletterfromimage.h">
